--- a/index.html
+++ b/index.html
@@ -804,12 +804,8 @@
                         FAQ
                     </h2>
                 </div>
-                <div style="
-                        display: grid;
-                        grid-template-columns: auto ;
-                        grid-gap: 10px;
-                        " class="faq-container">
-                    <div class="faq-containe__container">
+                <div style="display: grid; grid-template-columns: auto ; grid-gap: 10px;" class="faq-container">
+                    <div style="font-size: 14px;" class="faq-containe__container">
                         <div id="toggle1" class="toggle">
                             <p>
                                 <span class="title-name">
