--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             <div class="product-cart">
               <div class="product-cart-item">
-                <a style="width: 30%;" href="#">
+                <a href="#">
                   <div class="product-img">
                     <img
                       style="width: 100%"
@@ -125,7 +125,7 @@
                     />
                   </div>
                 </a>
-                <div style="width: 70%;" class="wrap-product-title">
+                <div class="wrap-product-title">
                   <a href="">
                     <p class="product-title">Premium Sectional Couch Cover</p>
                   </a>
