--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
                 </select>
               </div>
               <div class="sub-cart--btnAdd">
-                <button style="width: 100%; height: 40px; background-color: #ffce29; color: #000000; border: none; font-weight: 700;">ADD TO CART</button>
+                <button style="width: 100%; height: 40px; background-color: #000000; color: #fff; border: none; font-weight: 700;">ADD TO CART</button>
               </div>
             </div>
             
-            </div>
+          </div>
         </div>
         
 
